# 3ds-cmake

./: DevkitArm3DS.cmake  DevkitArmGBA.cmake  README.md
cmake/: ToolsGBA.cmake
examples_gba/gfx_and_sound/: CMakeLists.txt  main.cpp  memory.h
